@@ -11,6 +11,7 @@
 - fix wait time resolution in alarm and state queue handlers.
 - fix handling of quoted slash alone.
 - fix parse confusion between attribute and attribute value.
+- fix version passed to get_supported_ver_and_cost.
 
 18/06/2007 autofs-5.0.2
 -----------------------
